Added basic description and ordered list

--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
 
 
 <body>
+<h1>OFV's Portfolio</h1>
+<p> Here is just a basic mvp of my portfolio. The goal of this is to represent my growing skills in..</p>
+<ul>
+<li>HTML</li>
+<p></p>
+<li>CSS</li>
+<p></p>
+<li>Javascript</li>
+<p></p>
 
-    
+</ul>
 </body>
 
 
