--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/index.css" />
-  </head>
+</head>
 
-  <body>
-    <h1>OFV's Portfolio</h1>
+<body>
+    <h1 class="wrapper">OFV's Portfolio </h1>
     <div style="display:grid;">
-    <img src="images/LlQqMgi.jpg">
-    </div>  
-    <h2>
-      Here is just a basic mvp of my portfolio. The goal of this is to represent
-      my growing skills in..
-    </h2>
-     <div style = "background-color:grey; max-width:400px; margin:auto; border-radius: 10px;">
-      <p style="font-size:30px; font-weight: bold;">
-      HTML <img style = "width:50px; padding-top: 1;"src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipground.com%2Fimages%2Fhtml-logo-png-3.png&f=1&nofb=1&ipt=33fd6ff16495484ab7d3f16e1f303713cff51daa7446f861f8b410d297110de8&ipo=images">
-      </p>
-
-      <p style="font-size:30px; font-weight: bold;">CSS <img style = "width:40px; padding-top: 1;"src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpnghq.com%2Fwp-content%2Fuploads%2Fcss-html-logo-png-transparent-overlay-1536x1536.png&f=1&nofb=1&ipt=33393d7099d57f992443111d9e3f6c172f4f9d00e5767a14a2856b06a6ecf46a&ipo=images"></p>
-      <p style="font-size:30px; font-weight: bold;">Javascript <img style = "width:32px; padding-top: 1;"src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freepnglogos.com%2Fuploads%2Fjavascript-png%2Fjavascript-vector-logo-yellow-png-transparent-javascript-vector-12.png&f=1&nofb=1&ipt=af4d648af4ec300058781b8debbc65db73cfc064d1f462aa4b1f5ec39b691c5d&ipo=images"></p>
+        <img src="images/LlQqMgi.jpg">
     </div>
-    <h2>Here are some ways to contact me</p>
-  </body>
+    <h2 class="wrapper">
+        Here is just a basic mvp of my portfolio. The goal of this is to represent
+        my growing skills in..
+    </h2>
+    <div style="padding: 5px;">
+        <div class="wrapper" style="padding-bottom:3px; padding-top: 1px; padding-left: 10px; padding-right: 10px;">
+            <p>
+                HTML <img style="width:50px; padding-top: 0;"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipground.com%2Fimages%2Fhtml-logo-png-3.png&f=1&nofb=1&ipt=33fd6ff16495484ab7d3f16e1f303713cff51daa7446f861f8b410d297110de8&ipo=images">
+            </p>
+
+            <p>CSS <img style="width:40px; padding-top: 0;"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpnghq.com%2Fwp-content%2Fuploads%2Fcss-html-logo-png-transparent-overlay-1536x1536.png&f=1&nofb=1&ipt=33393d7099d57f992443111d9e3f6c172f4f9d00e5767a14a2856b06a6ecf46a&ipo=images">
+            </p>
+            <p>Javascript <img style="width:32px;"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freepnglogos.com%2Fuploads%2Fjavascript-png%2Fjavascript-vector-logo-yellow-png-transparent-javascript-vector-12.png&f=1&nofb=1&ipt=af4d648af4ec300058781b8debbc65db73cfc064d1f462aa4b1f5ec39b691c5d&ipo=images">
+            </p>
+        </div>
+    </div>
+    <div class="wrapper">
+        <h2>Here are some ways to contact me</p>
+    </div>
+    <div class="wrapper">
+        <a href="https://t.me/ofvbtc">Telegram</a>
+    </div>
+</body>
+
 </html>
