--- a/index.html
+++ b/index.html
@@ -1,41 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
-
 <body>
-    <h1 class="wrapper">OFV's Portfolio </h1>
-    <div style="display:grid;">
-        <img src="images/LlQqMgi.jpg">
+    <div>
+    <h1>ofv </h1>
+    <span>Telegram:</span>
+    <a class="linkone" href="https://t.me/ofvbtc">t.me/ofvbtc</a>
+    <p></p>
+    <span>Discord: </span>
+    <a class="linkone" href="https://discordlookup.com/user/1224060882900746443">of.v</a>
     </div>
-    <h2 class="wrapper">
-        Here is just a basic mvp of my portfolio. The goal of this is to represent
-        my growing skills in..
-    </h2>
-    <div style="padding: 5px;">
-        <div class="wrapper" style="padding-bottom:3px; padding-top: 1px; padding-left: 10px; padding-right: 10px;">
-            <p>
-                HTML <img style="width:50px; padding-top: 0;"
-                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipground.com%2Fimages%2Fhtml-logo-png-3.png&f=1&nofb=1&ipt=33fd6ff16495484ab7d3f16e1f303713cff51daa7446f861f8b410d297110de8&ipo=images">
-            </p>
-
-            <p>CSS <img style="width:40px; padding-top: 0;"
-                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpnghq.com%2Fwp-content%2Fuploads%2Fcss-html-logo-png-transparent-overlay-1536x1536.png&f=1&nofb=1&ipt=33393d7099d57f992443111d9e3f6c172f4f9d00e5767a14a2856b06a6ecf46a&ipo=images">
-            </p>
-            <p>Javascript <img style="width:32px;"
-                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freepnglogos.com%2Fuploads%2Fjavascript-png%2Fjavascript-vector-logo-yellow-png-transparent-javascript-vector-12.png&f=1&nofb=1&ipt=af4d648af4ec300058781b8debbc65db73cfc064d1f462aa4b1f5ec39b691c5d&ipo=images">
-            </p>
-        </div>
-    </div>
-    <div class="wrapper">
-        <h2>Here are some ways to contact me</p>
-    </div>
-    <div class="wrapper">
-        <a href="https://t.me/ofvbtc">Telegram</a>
-    </div>
+    
 </body>
-
 </html>
