--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
     <div>
     <h1>ofv </h1>
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogodownload.org%2Fwp-content%2Fuploads%2F2017%2F11%2Ftelegram-logo-8.png&f=1&nofb=1&ipt=d69bc6272db16db064e845d29dcf78fdc1ba97f0393293f47d77b9c2c36f23ea&ipo=images">
     <span>Telegram:</span>
     <a class="linkone" href="https://t.me/ofvbtc">t.me/ofvbtc</a>
     <p></p>
-    <span>Discord: </span>
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogodownload.org%2Fwp-content%2Fuploads%2F2017%2F11%2Fdiscord-logo-1-1.png&f=1&nofb=1&ipt=10d0f76de49028235212b28284eca8ff59b9c7537f6063533b687f1dd288669f&ipo=images">
+    <span>Discord:</span>
     <a class="linkone" href="https://discordlookup.com/user/1224060882900746443">of.v</a>
+    <p></p>
+    <h4>Description:</h4>
+    <p> Here is my portfolio page, it represents my progress in learning html, css, and js.</p>
+
     </div>
+    
+
     
 </body>
 </html>
