Added a padding revision to the description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     
     <h4 style="margin-top:0.21px; outline:solid 1px whitesmoke; box-sizing: border-box; width:110px; background-color:black; border-radius:8px; padding:5px" class =  "" >Description:</h4>
-    <h1 class="underlay"style="font-size:14px;  outline:solid 1px whitesmoke;"> Here is my portfolio page, it represents my progress in learning html, css, and js.</h1>
+    <h1 class="underlay"style="font-size:14px;  outline:solid 1px whitesmoke; padding:10px;"> Here is my portfolio page, it represents my progress in learning html, css, and js.</h1>
     
 
     </div>
