--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Portfolio</title>
     <link rel='stylesheet' href='./output.css'>
 </head>
-<body>
+<body class="items-center justify-center bg-black">
     
 
 
   <!-- Main Content Section -->
-  <div class="h-screen w-screen flex flex-row justify-center bg-black ">
+  <div class="h-screen w-screen flex flex-row justify-center bg-black sm:scale-50 ">
 
     <div class="relative m-auto flex">
 
