--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
 <head>
-    <meta charset=UTF-8>
-    <meta name=viewport content=width=device-width, initial-scale=1.0>
-    <title>Portfolio</title>
-    <link rel='stylesheet' href='./output.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="items-center justify-center bg-black">
+<body>
+
     
 
-
   <!-- Main Content Section -->
-  <div class="h-screen w-screen flex flex-row justify-center bg-black sm:scale-50 ">
+  <div class="h-screen w-screen flex flex-row justify-center bg-black ">
 
     <div class="relative m-auto flex">
 
-      <div class="absolute bg-gradient-to-r from-blue-950 to-sky-500 inset-0 rounded-lg blur-2xl animate-tilt transition duration:300 "></div>
+      <div class="absolute bg-gradient-to-r from-blue-950 to-sky-500 inset-0 rounded-lg blur-2xl animate-tilt transition duration-300 "></div>
 
     <div class="self-center flex w-[400px] h-[400px] bg-black rounded-3xl shadow-black shadow-xl flex-col outline-1 outline relative outline-slate-800">
       <!-- Title Section -->
@@ -66,7 +66,6 @@
   </div>
 </div>
 
-
-<script src='scripts/index.js'></script>
+    
 </body>
 </html>
