--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
     <div class="relative m-auto flex">
 
-      <div class="absolute bg-gradient-to-r from-blue-950 to-sky-500 inset-0 rounded-lg blur-2xl animate-tilt transition duration-300 "></div>
+      <div class="absolute bg-gradient-to-r from-amber-950 to-red-800 inset-0 rounded-lg blur-2xl animate-tilt transition duration-300 "></div>
 
-    <div class="self-center flex w-[400px] h-[400px] bg-black rounded-3xl shadow-black shadow-xl flex-col outline-1 outline relative outline-slate-800">
+    <div class="self-center flex w-[400px] h-[400px] bg-black rounded-3xl shadow-black shadow-xl flex-col outline-1 outline relative outline-red-800">
       <!-- Title Section -->
       <div class="flex mt-20 h-20 justify-center items-center flex-col mb-10">
    
          <div class="relative flex">
-        <div class="absolute inset-0 bg-slate-800 bg-gradient-to-r rounded-full blur-md z-0"></div>
-        <div class="flex w-fit h-fit text-[90px] justify-center  rounded-full s px-4 items-center gap-3 z-10 bg-black outline-1 outline outline-slate-600">
+        <div class="absolute inset-0 bg-red-800 bg-gradient-to-r rounded-full blur-md z-0"></div>
+        <div class="flex w-fit h-fit text-[90px] justify-center  rounded-full s px-4 items-center gap-3 z-10 bg-black outline-1 outline outline-red-600">
 
           
           <h1 class="text-center font-bold font-sans text-white  p-1">ofv</h1>
@@ -39,21 +39,21 @@
 
 
         <!-- Discord Button -->
-        <div class="flex w-16 h-16 bg-slate-800 shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-slate-600">
+        <div class="flex w-16 h-16 bg-red-950  shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-red-600">
           <a href="https://discordlookup.com/user/1224060882900746443">
             <img class="scale-75" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi1.wp.com%2Fcdn.iconscout.com%2Ficon%2Ffree%2Fpng-256%2Fdiscord-4408640-3649922.png&f=1&nofb=1&ipt=993dd630be6d631fa21f4bc91fed93dfcfc5bc28c0b1e7b0c66c351a5b479356&ipo=images" />
           </a>
         </div>
 
         <!-- GitHub Button -->
-        <div class="flex w-16 h-16 bg-slate-800 shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-slate-600">
+        <div class="flex w-16 h-16 bg-red-950 shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-red-600">
           <a href="https://github.com/ofvcode">
             <img class="scale-75" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpngimg.com%2Fuploads%2Fgithub%2Fgithub_PNG80.png&f=1&nofb=1&ipt=826094dd7afdf27994be00445eef8ba02b5202f268fb012474e8e893a9f06c89&ipo=images" />
           </a>
         </div>
 
         <!-- Moon Button -->
-        <div class="flex w-16 h-16 bg-slate-800 shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-slate-600">
+        <div class="flex w-16 h-16 bg-red-950  shadow-md shadow-black hover:shadow self-center rounded-full hover:scale-110 duration-300 ease-in-out outline-1 outline outline-red-600">
           <a href="http://www.staggeringbeauty.com/">
             <img class="scale-75" src="https://icons.veryicon.com/png/o/miscellaneous/a-set-of-lines/moon-85.png" />
           </a>
