--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
   .lastline{
     width:calc(100%)
   }
+  .card{
+
+    width:100px;
+    margin-left:auto;
+    margin-right:auto;
+    
+  }
+  .welcome{
+    margin-bottom:10px;
+    
+
+  }
   
 }
     </style>
@@ -94,7 +106,7 @@
 
         </div>
 
-        <div class=" blocks w-[100%] mt-3 h-[600px] items-center  bg-black outline outline-1  mb-30   flex justify-center">
+        <div id="welcome"class=" blocks w-[100%] mt-3 h-[600px] items-center  bg-black outline outline-1  mb-30   flex justify-center">
             <div id="card" class="hover:scale-110  ease-in-out duration-300 flex h-fit w-110 rounded-xl outline-1 outline-white p-9 flex-row group appear">
                 <h1 class="appear font-sans font-semibold text-4xl bg-clip-text bg-gradient-to-r from-white to-gray-500 text-transparent group-hover:scale-105  ease-in-out duration-400 delay-75">Welcome..</h1>
                 <a href="#about" class="text-white outline-white outline-[0.2px] p-2 ml-auto rounded-xl hover:scale-110 duration-400 delay-75"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
