--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="flex flex-col gap-10 ">
           <div id="card" class="hover:scale-110  ease-in-out duration-300 flex h-fit w-110 rounded-xl outline-1 outline-white p-9 flex-col group">
             <h1 class=" font-sans font-semibold text-4xl bg-clip-text bg-gradient-to-r from-white to-black text-transparent group-hover:scale-105  ease-in-out duration-400">Who am i?</h1>
-            <p class="text-white font-sans font-semibold text-[20px] mt-10 blur-sm group-hover:blur-none duration-400">I am ofv, a fullstack developer based in the US.</p>
+            <p class="text-white font-sans font-semibold text-[20px] mt-10 blur-sm group-hover:blur-none duration-400 focus:blur-none">I am ofv, a fullstack developer based in the US.</p>
             
           </div>
           <div id="card" class="lastcard hover:scale-110  ease-in-out duration-300 flex h-fit w-110 rounded-xl outline-1 outline-white p-9 flex-col group">
