Added ip show + log

--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
 
 
           <div id="first header" class=" text-white font-bold font-sans">
-          <h1 class="text-xl">OFV'S PORTFOLIO</h1>
+          <h1 class="text-xl mr-2">OFV'S PORTFOLIO</h1>
           </div>
 
-          <div id="first header" class=" text-white font-bold font-sans">
-            <h1 class="text-xl ml-auto">OV'S PORTFOLIO</h1>
+          <div id="first header" class=" text-white font-bold font-sans ml-auto">
+            <h1 class="text-xl">YOUR IP:</h1>
+            <h1 id="user-ip" class="text-xl ">UNKNOWN</h1>
             </div>
   
 
