--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
                 <img class="hover:scale-110 duration-300"src="https://skillicons.dev/icons?i=twitter" />
               </a>
           
+              <a href="https://github.com/ofvcode">
+                <img class="hover:scale-110 duration-300"src="https://skillicons.dev/icons?i=github" />
+              </a>
           
     </div>   
   </div>
